--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -141,8 +141,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Dependencies\glad\src\glad.c" />
+    <ClCompile Include="src\AI\GameManager.cpp" />
     <ClCompile Include="src\AI\State\BaseEnemyState.cpp" />
     <ClCompile Include="src\AI\Enemy.cpp" />
+    <ClCompile Include="src\AI\State\EnemyFaceState.cpp" />
+    <ClCompile Include="src\AI\State\EnemyIdleState.cpp" />
+    <ClCompile Include="src\AI\State\EnemyPatrolState.cpp" />
+    <ClCompile Include="src\AI\State\PursueEnemyState.cpp" />
     <ClCompile Include="src\Grass\GrassMesh.cpp" />
     <ClCompile Include="src\Mesh\MeshInstance.cpp" />
     <ClCompile Include="src\SceneManager\Scenes\SceneOne.cpp" />
@@ -247,8 +252,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\stb_image.h" />
+    <ClInclude Include="src\AI\GameManager.h" />
     <ClInclude Include="src\AI\State\BaseEnemyState.h" />
     <ClInclude Include="src\AI\Enemy.h" />
+    <ClInclude Include="src\AI\State\EnemyFaceState.h" />
+    <ClInclude Include="src\AI\State\EnemyIdleState.h" />
+    <ClInclude Include="src\AI\State\EnemyPatrolState.h" />
+    <ClInclude Include="src\AI\State\PursueEnemyState.h" />
     <ClInclude Include="src\Grass\GrassMesh.h" />
     <ClInclude Include="src\Mesh\MeshInstance.h" />
     <ClInclude Include="src\AI\State\eEnemyState.h" />
